--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Silvester Spath</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <a href="https://silvesterspath.github.io/github_finder/">Go to Search</a>
 </body>
  
 </html>
