--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <meta charset="utf-8">
-  <title>Spath</title>
+  <title>Spath Search</title>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    
+  <a href="https://silvesterspath.github.io/github_finder/">Go to Search</a>
 </body>
 
 </html>
