--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="content">
              <a class= "github_finder" href='https://silvesterspath.github.io/github_finder/#/' target="blank"> Back to Github finder
-                <img src="./img/github.png" alt="github_finder"  id="github" >
+                <img src=".github.png" alt="github_finder"  id="github" >
             </a>
             
             <h1>SilvesterSpath </h1>
@@ -34,7 +34,7 @@
                 Developer
                 </h2>
             <a href='https://silvesterspath.me' target="blank">
-                <img src="./img/swx.gif" alt="Silvester"  >
+                <img src="./swx.gif" alt="Silvester"  >
             </a>
             
             <p>  I design and build spectacular websites for businesses around the world. Believe me you need a modern and powerful website in todays world. Send me an email ! If we are a good fit, I will give you a time and cost estimate.</p>
