--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style.css">
-    <title>Github Pages</title>
+    <title>MyGithub Pages</title>
 </head>
 <body>
     <div class="container ">
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="content">
-             <a class= "github_finder" href='https://silvesterspath.github.io/github_finder/#/' target="blank"> Back to Github finder
+             <a class= "github_finder" href='https://silvesterspath.github.io/github_finder/#/' target="blank"> Go to MyGithub Finder
                 <img src="github.png" alt="github_finder"  id="github" >
             </a>
             
