--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="content">
-             <a class= "github_finder" href='https://silvesterspath.github.io/github_finder/#/' target="blank"> Go to MyGithub Finder
+             <a class= "github_finder" href='https://silvesterspath.github.io/github_finder/' target="blank"> Go to MyGithub Finder
                 <img src="github.png" alt="github_finder"  id="github" >
             </a>
             
