--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <a class="box"></a>
     <a class="box"></a>
     <a class="box"></a>
+    <a class="box"></a>
+    <a class="box"></a>
     
     <script src="./script.js"></script>
 </body>
