--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <h1>Scroll to see my Works on Github Pages</h1>
-    <div id="scroll">
-	    <p>Scroll</p>
-		<div id="arrow">|</div>
-		<div id="arrow-head">v</div>	
-	</div>
+    <div class="scroll">
+      <p>Scroll</p>
+      <div id="arrow">|</div>
+      <div id="arrow-head">v</div>	
+    </div>
     <a class="box"></a>
     <a class="box"></a>
     <a class="box"></a>
